--- a/render.yaml
+++ b/render.yaml
@@ -26,7 +26,7 @@ services:
       - key: NODE_ENV
         value: production
       - key: REACT_APP_API_URL
-        value: https://cosmo-rlt-stats.onrender.com
+        value: https://cosmo-stats-backend.onrender.com
       - key: PORT
         value: 4000
     buildFilter:
