--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,8 @@ services:
   - type: web
     name: cosmo-stats-backend
     env: node
+    runtime: node
+    rootDir: backend
     buildCommand: npm install && npm run build
     startCommand: npm start
     envVars:
@@ -14,12 +16,12 @@ services:
     buildFilter:
       paths:
       - backend/**
-    rootDirectory: backend
 
   - type: web
     name: cosmo-stats-frontend
     env: node
-    nodeVersion: 18.17.0
+    runtime: node
+    rootDir: frontend
     buildCommand: npm install && npm run build
     startCommand: npx serve -s build -l $PORT
     envVars:
@@ -31,5 +33,4 @@ services:
         value: 4000
     buildFilter:
       paths:
-      - frontend/**
-    rootDirectory: frontend 
+      - frontend/** 
