--- a/render.yaml
+++ b/render.yaml
@@ -22,7 +22,7 @@ services:
     env: node
     runtime: node
     rootDir: frontend
-    buildCommand: npm install && npm run build
+    buildCommand: npm install && npm install --save-dev @types/react-router-dom && npm run build
     startCommand: npx serve -s build -l $PORT
     envVars:
       - key: NODE_ENV
