--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: node
     runtime: node
     rootDir: backend
-    buildCommand: npm install && npm run build
+    buildCommand: npm install && npm install --save-dev @types/node @types/express @types/pg @types/pdfkit @types/cors && npm run build
     startCommand: npm start
     envVars:
       - key: NODE_ENV
