--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "COSMO Stats Backend",
   "main": "dist/server.js",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && mkdir -p dist/images && cp -R ../frontend/public/images/* dist/images/",
     "start": "node dist/server.js",
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "test": "jest"
