Add environment switching script and update README for environment setup
- Introduced `env-switch.sh` script to facilitate switching between development and production environments.
- Updated README to include instructions for using the new script and clarified environment setup details.
- Adjusted backend and frontend package configurations to ensure proper environment handling.
- Removed unused assets and cleaned up code in various components for better maintainability.

--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc && mkdir -p dist/images && cp -R ../frontend/public/images/* dist/images/",
     "start": "node dist/server.js",
-    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "dev": "NODE_ENV=development ts-node-dev --respawn --transpile-only src/server.ts",
     "test": "jest"
   },
   "keywords": [],
@@ -28,5 +28,8 @@
     "@types/pg": "^8.6.6",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   }
 }
