--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cosmo-stats",
+  "name": "cosmo-stats-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -27,7 +27,8 @@
   },
   "scripts": {
     "start": "PORT=4000 react-scripts start",
-    "build": "react-scripts build",
+    "build": "cp public/api-config.production.js public/api-config.js && react-scripts build",
+    "build:dev": "cp public/api-config.development.js public/api-config.js && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -56,5 +57,8 @@
     "@types/react-dom": "^18.2.18",
     "@types/react-router-dom": "^5.3.3",
     "typescript": "4.9.5"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   }
 }
