Prepare repository for Render.com deployment
- Added `prepare-for-render.sh` script to automate the setup for deployment on Render.com, including creating necessary configuration files and ensuring required assets are in place.
- Updated `.gitignore` to retain important API configuration files for deployment.
- Modified `render.yaml` to configure backend and frontend services for deployment, including environment variables and build commands.
- Introduced new frontend configuration files (`api-config.js`, `api-config.production.js`, `api-config.development.js`, `index.html`, `manifest.json`, and `favicon.svg`) to support the deployment process.
- Updated frontend `package.json` scripts for better handling of environment-specific configurations during the build process.

--- a/.gitignore
+++ b/.gitignore
@@ -17,8 +17,9 @@ env.development
 env.production
 
 # Local configuration
-public/api-config.js
-frontend/public/api-config.js
+# DO NOT EXCLUDE THESE CONFIGS - NEEDED FOR RENDER.COM BUILDS
+# public/api-config.js
+# frontend/public/api-config.js
 
 # Testing
 /coverage/
@@ -108,9 +109,6 @@ jspm_packages/
 
 # Excel temp files
 ~$*
-
-# Frontend specific
-public/
 
 # Backend specific
 backend/public/
