--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,8 +27,10 @@
   },
   "scripts": {
     "start": "PORT=4000 react-scripts start",
-    "build": "cp public/api-config.production.js public/api-config.js && react-scripts build",
-    "build:dev": "cp public/api-config.development.js public/api-config.js && react-scripts build",
+    "prebuild": "echo 'Creating production api-config.js...' && cp -f public/api-config.production.js public/api-config.js || echo 'Warning: Could not copy api-config.production.js'",
+    "build": "react-scripts build",
+    "postbuild": "echo 'Build completed successfully'",
+    "build:dev": "cp -f public/api-config.development.js public/api-config.js && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
