--- a/render.yaml
+++ b/render.yaml
@@ -1,35 +1,32 @@
 services:
+  # Backend API Service
   - type: web
     name: cosmo-stats-backend
     env: node
-    buildCommand: npm install && npm run build
-    startCommand: npm start
+    plan: free
+    buildCommand: cd backend && npm install && npm run build
+    startCommand: cd backend && NODE_ENV=production node dist/server.js
     envVars:
       - key: NODE_ENV
         value: production
-      - key: DATABASE_URL
-        sync: false
       - key: PORT
         value: 4001
-    buildFilter:
-      paths:
-      - backend/**
-    rootDirectory: backend
+      - key: DB_CONNECTION_STRING
+        value: postgresql://cosmo_rlt_user:BpG7RWIjipwdYQMKjXYRua4TcpYffwPL@dpg-d054t79r0fns73d2loeg-a/cosmo_rlt
+      - key: CORS_ORIGINS
+        value: https://cosmo-stats-frontend.onrender.com
 
-  - type: web
+  # Frontend Static Site
+  - type: static
     name: cosmo-stats-frontend
-    env: node
-    nodeVersion: 18.17.0
-    buildCommand: npm install && npm run build
-    startCommand: npx serve -s build -l $PORT
-    envVars:
-      - key: NODE_ENV
-        value: production
-      - key: REACT_APP_API_URL
-        value: https://cosmo-rlt-stats.onrender.com
-      - key: PORT
-        value: 4000
-    buildFilter:
-      paths:
-      - frontend/**
-    rootDirectory: frontend 
+    env: static
+    buildCommand: cd frontend && npm install && npm run build
+    staticPublishPath: ./frontend/build
+    headers:
+      - path: /*
+        name: Cache-Control
+        value: no-cache
+    routes:
+      - type: rewrite
+        source: /*
+        destination: /index.html 
