Update tsconfig.json with improved type resolution settings

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -11,8 +11,15 @@
     "moduleResolution": "node",
     "lib": ["es2017", "dom"],
     "typeRoots": ["./node_modules/@types", "./src/types"],
-    "noImplicitAny": false
+    "noImplicitAny": false,
+    "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true,
+    "baseUrl": ".",
+    "paths": {
+      "*": ["node_modules/*", "src/types/*"]
+    },
+    "types": ["node"]
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "src/types/*.d.ts"],
   "exclude": ["node_modules"]
 } 
