--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     name: cosmo-stats-backend
     env: node
     plan: free
-    buildCommand: cd backend && npm install && npm install --save-dev @types/node && npm run build -- --skipLibCheck --noImplicitThis false
+    buildCommand: cd backend && npm install && npm install --save-dev @types/node && tsc --skipLibCheck --noImplicitThis false --resolveJsonModule --allowSyntheticDefaultImports && mkdir -p dist/images && cp -R ../frontend/public/images/* dist/images/
     startCommand: cd backend && NODE_ENV=production node dist/server.js
     envVars:
       - key: NODE_ENV
