--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -10,6 +10,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
+  "theme_color": "#E91E63",
   "background_color": "#ffffff"
 } 
