--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     name: cosmo-stats-backend
     env: node
     plan: free
-    buildCommand: cd backend && npm install && npm install --save-dev @types/node && npm run build
+    buildCommand: cd backend && npm install && npm install --save-dev @types/node && npm run build && mkdir -p dist/pdf-output
     startCommand: cd backend && NODE_ENV=production node dist/server.js
     envVars:
       - key: NODE_ENV
