--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -9,16 +9,17 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "moduleResolution": "node",
-    "lib": ["es2017", "dom"],
-    "typeRoots": ["./node_modules/@types", "./src/types"],
+    "lib": ["es2017", "dom", "esnext"],
+    "typeRoots": ["./node_modules/@types", "./src/types", "./src"],
     "noImplicitAny": false,
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
     "baseUrl": ".",
     "paths": {
-      "*": ["node_modules/*", "src/types/*"]
-    }
+      "*": ["node_modules/*", "src/types/*", "src/*"]
+    },
+    "noEmitOnError": false
   },
-  "include": ["src/**/*", "src/types/*.d.ts"],
+  "include": ["src/**/*", "src/types/*.d.ts", "src/*.d.ts"],
   "exclude": ["node_modules"]
 } 
