--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,9 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "pdfkit": "^0.13.0",
-    "pg": "^8.10.0"
+    "pg": "^8.10.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.0.4"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
@@ -27,8 +29,7 @@
     "@types/node": "^18.19.100",
     "@types/pdfkit": "^0.13.9",
     "@types/pg": "^8.6.6",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.0.4"
+    "ts-node-dev": "^2.0.0"
   },
   "engines": {
     "node": ">=16.0.0"
